# knowviai

./: config.py  data_extraction.py  main.py  pyproject.toml
extracted_data/class_12/vistas/: Journey to the end of the Earth.md  Memories of Childhood.md  On the Face of It.md  The Enemy.md  The Third Level.md  The Tiger King.md
knowviai/: manage.py
knowviai/agent/: consumers.py  routing.py  urls.py  views.py
knowviai/agent/templates/agent/: chat.html
knowviai/knowviai/: asgi.py  settings.py  urls.py  wsgi.py
knowviai/users/: serializers.py  urls.py  views.py
testing/: rename.py
