[project]
name = "knowviaai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "django>=5.2.3",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-yasg>=1.21.10",
    "ipykernel>=6.29.5",
    "llama-cloud-services>=0.6.33",
    "openai>=1.88.0",
    "psycopg>=3.2.9",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.9.0",
]
